fixed text align of titles

--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -3,6 +3,7 @@
     font-size: 5rem;
     font-family: Lato-Light;
     letter-spacing: 6px;
+    text-align: center;
 }
 
 @media (max-width: 1536px) {
